src/app/shared/components/navbar/navbar.component.css
.container-navbar{
  z-index: 9999;
  width: 100%;
  height: 90px;
  position: fixed;
  top: 0px;
  background-color: wheat;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.4);
}

.container-icons{
  width: 80%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo-image{
  width: 90px;
}

.mat-mdc-menu-trigger{
  background-color: transparent;
  border: none;
  transform: scale(1.3);
  cursor: pointer;
}

